# security-orchestrator-microservices

./: .gitignore  API_ANALYSIS_INTEGRATION_REPORT.md  README.md  README_API_ANALYSIS.md  README_SWAGGER_ANALYSIS.md  TESTING_REPORT.md  docker-compose.yml  security_analysis_report.json  start_services.py  test_parser.py  test_security_analyzer.py
docs/architecture-talk/: presentation.html  talk.md
docs/migration-roadmap/: README.md  architecture-diagrams.md  migration-timeline.md  risk-assessment.md  summary-and-recommendations.md  validation-approach.md
flutter-app/: .gitignore  README.md  pubspec.yaml
flutter-app/lib/: main.dart
flutter-app/lib/application/providers/: connectivity_provider.dart
flutter-app/lib/domain/entities/: connection_status.dart
flutter-app/lib/domain/usecases/: check_connectivity_usecase.dart
flutter-app/lib/features/: features.dart
flutter-app/lib/features/api_analysis/: api_analysis.dart
flutter-app/lib/features/health_monitoring/: health_monitoring.dart
flutter-app/lib/infrastructure/api/: connectivity_usecase_impl.dart
flutter-app/lib/infrastructure/services/: connectivity_service.dart
flutter-app/lib/presentation/pages/: home_page.dart
flutter-app/lib/presentation/widgets/: connection_status_card.dart
flutter-app/test/: widget_test.dart
flutter-app/web/: index.html  manifest.json
infrastructure/docker/: init.sql
services/: vulnerable-api
services/api-analysis-service/: .gitignore  SECURITY_SETUP.md  main.py  requirements.txt  test_ai_integration.py
services/api-analysis-service/src/api/: models.py  routes.py
services/api-analysis-service/src/api/controllers/: __init__.py  ai_controller.py  analysis_controller.py  batch_controller.py  health_controller.py  swagger_analysis_controller.py
services/api-analysis-service/src/api/models/: __init__.py  ai_models.py  swagger_analysis_models.py
services/api-analysis-service/src/api/routes/: __init__.py  ai_routes.py  health_routes.py  swagger_analysis_routes.py
services/api-analysis-service/src/core/: config.py  logging.py
services/api-analysis-service/src/services/: ai_security_analyzer.py  analysis_service.py  openapi_analysis_service.py  openapi_parser.py  security_analyzer.py  storage_service.py
services/flutter-web-client-test-service/: .env.example  Dockerfile  README.md  requirements.txt
services/flutter-web-client-test-service/src/: main.py
services/flutter-web-client-test-service/src/models/: __init__.py  test_models.py
services/flutter-web-client-test-service/src/services/: test_runner.py  test_scenarios.py
services/flutter-web-client-test-service/src/services/__init__.py</: path
services/flutter-web-client-test-service/src/utils/: logger.py
services/health-monitoring-service/: .env.example  Dockerfile  requirements.txt
services/health-monitoring-service/src/: __init__.py
services/health-monitoring-service/src/health_monitoring_service/: __init__.py  main.py
services/health-monitoring-service/src/health_monitoring_service/config/: __init__.py  dependencies.py  settings.py
services/process-management/: pyproject.toml
services/process-management/src/process_management_service/: __init__.py
services/vulnerable-api-service/: README  main.py
services/vulnerable-api-service/src/: models.py  routes.py  utils.py
shared/common-utilities/: README_health.md  example_usage.py  pyproject.toml  test_health.py
shared/common-utilities/src/security_orchestrator_common/: __init__.py  config.py  exceptions.py  health.py  health_api.py
(+26 files in other folders)
